clusters/kubernetes/infrastructure/networks/gateways/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  namespace: network
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "xxllm.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-cert
